# basisu-rs

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: build.yml
bindings/: basisu_transcoder.cpp  bindings.cpp  bindings.h  bindings.rs
examples/: transcode_to_png.rs  video.rs
src/: lib.rs
tests/: texture1.basis
